一応表示できるようになった。

--- a/card/index.html
+++ b/card/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-  <main></main>
+  <main>
+    <section id="cardView"></section>
+  </main>
   <script src="bingoCard.js"></script>
 </body>
 
