--- a/card/index.html
+++ b/card/index.html
@@ -14,6 +14,7 @@
     <section id="cardView"></section>
   </main>
   <script src="bingoCard.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
