updata index.html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 </head>
 
 <body>
-  <header>ビンゴ</header>
+  <header>
+    <h1>ビンゴ</h1>
+  </header>
   <main>
     <a href="./card/">ビンゴカード</a>
+    <a href="./printCards/">ビンゴカードのまとめて印刷用(イベントなどの準備でご利用ください。)</a>
   </main>
 </body>
 
