--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <h1>ビンゴ</h1>
   </header>
   <main>
-    <a href="./card/">ビンゴカード</a>
-    <a href="./printCards/">ビンゴカードのまとめて印刷用(イベントなどの準備でご利用ください。)</a>
+    <p><a href="./card/">ビンゴカード</a></p>
+    <p><a href="./printCards/">ビンゴカードのまとめて印刷用(イベントなどの準備でご利用ください。)</a></p>
+    <p><a href="./machine/">ビンゴマシーン</a></p>
   </main>
 </body>
 
