--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ビンゴ</title>
+  <meta name="description" content="web上でビンゴゲームを行うためのアプリです。ビンゴカードやビンゴマシーンなどがあります。イベント向けにカード一斉印刷メニューもあります。">
+  <title>ホーム | webビンゴ<アプリ< /title>
 </head>
 
 <body>
   <header>
     <h1>ビンゴ</h1>
+    <p>注意事項:このアプリで作成するビンゴカードは一般のものとは違い、24マスに1~75までをランダムで入っています。一般のビンゴマシーンが利用できないこともありますのでご注意ください。</p>
   </header>
   <main>
     <p><a href="./card/">ビンゴカード</a></p>
