--- a/printCards/index.html
+++ b/printCards/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ビンゴカード一括印刷</title>
+  <meta name="description" content="イベントの準備用のビンゴカード一斉印刷ページです。枚数を指定すれば重複確率が少ないビンゴカードを印刷できます。">
+  <title>ビンゴカード一括印刷 |
+    webビンゴアプリ</title>
   <link href="./style.css" rel="stylesheet">
 </head>
 
