updata index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="web上でビンゴゲームを行うためのアプリです。ビンゴカードやビンゴマシーンなどがあります。イベント向けにカード一斉印刷メニューもあります。">
-  <title>ホーム | webビンゴ<アプリ< /title>
+  <title>ホーム | webビンゴアプリ</title>
 </head>
 
 <body>
