回っているときのアニメージョンを追加

--- a/machine/index.html
+++ b/machine/index.html
@@ -18,7 +18,10 @@
       <p id="showNumber">
       </p>
     </section>
-    <section class="history" id="viewHistories"></section>
+    <section class="historys">
+      <h2>履歴</h2>
+      <div class="history" id="viewHistories"></div>
+    </section>
     <section class="operation">
       <button onclick="startBingo()">回す</button>
     </section>
