--- a/machine/index.html
+++ b/machine/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ビンゴマシーン</title>
   <link href="./style.css" rel="stylesheet" />
+  <meta name="description" content="chakkun1121作成のウェブビンゴマシーンです。このアプリでスマホやパソコンでビンゴマシーンが利用できます。">
+  <link rel="canonical" href="https://chakkun1121.github.io/bingo/machine/">
 </head>
 
 <body>
