止めるボタンの作成

--- a/machine/index.html
+++ b/machine/index.html
@@ -26,6 +26,7 @@
     </section>
     <section class="operation">
       <button onclick="startBingo()">回す</button>
+      <button onclick="stopBingo()">止める(少しだけラグがあります)</button>
     </section>
   </main>
   <script src="./script.js"></script>
