--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="web上でビンゴゲームを行うためのアプリです。ビンゴカードやビンゴマシーンなどがあります。イベント向けにカード一斉印刷メニューもあります。">
   <title>ホーム | webビンゴアプリ</title>
+  <link rel="manifest" href="manifest.json" defer>
 </head>
 
 <body>
@@ -19,6 +20,20 @@
     <p><a href="./printCards/">ビンゴカードのまとめて印刷用(イベントなどの準備でご利用ください。)</a></p>
     <p><a href="./machine/">ビンゴマシーン</a></p>
   </main>
+  <!-- sw.jsの登録 -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('sw.js').then(function (registration) {
+        // 登録成功
+        console.log('ServiceWorker の登録に成功しました。スコープ: ', registration.scope);
+      }).catch(function (err) {
+        // 登録失敗
+        console.log('ServiceWorker の登録に失敗しました。', err);
+      });
+    } else {
+      console.error("サービスワーカー非対応ブラウザです。")
+    }
+  </script>
 </body>
 
 </html>
