--- a/printCards/index.html
+++ b/printCards/index.html
@@ -20,6 +20,9 @@
     <label>
       <input type="button" value="生成" onclick="creatCards()">
     </label>
+    <label>
+      <input type="button" value="印刷" onclick="print()">
+    </label>
   </header>
   <main>
     <div id="showCards"></div>
