--- a/machine/index.html
+++ b/machine/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ビンゴマシーン</title>
+  <title>ビンゴマシーン | webビンゴアプリ | chakkun1121</title>
   <link href="./style.css" rel="stylesheet" />
   <meta name="description" content="chakkun1121作成のウェブビンゴマシーンです。このアプリでスマホやパソコンでビンゴマシーンが利用できます。">
   <link rel="canonical" href="https://chakkun1121.github.io/bingo/machine/">
