--- a/printCards/index.html
+++ b/printCards/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="イベントの準備用のビンゴカード一斉印刷ページです。枚数を指定すれば重複確率が少ないビンゴカードを印刷できます。">
   <title>ビンゴカード一括印刷 |
-    webビンゴアプリ</title>
+    webビンゴアプリ | chakkun1121</title>
   <link href="./style.css" rel="stylesheet">
 </head>
 
