--- a/card/index.html
+++ b/card/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="webでビンゴを行う際に使用するビンゴカードです。">
-  <title>ビンゴカード | webビンゴアプリ</title>
+  <title>ビンゴカード | webビンゴアプリ | chakkun1121</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
