--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="web上でビンゴゲームを行うためのアプリです。ビンゴカードやビンゴマシーンなどがあります。イベント向けにカード一斉印刷メニューもあります。">
-  <title>ホーム | webビンゴアプリ</title>
+  <title>ホーム | webビンゴアプリ | chakkun1121</title>
   <link rel="manifest" href="manifest.json" defer>
 </head>
 
