リンクの追加

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <p><a href="./card/">ビンゴカード</a></p>
     <p><a href="./printCards/">ビンゴカードのまとめて印刷用(イベントなどの準備でご利用ください。)</a></p>
     <p><a href="./machine/">ビンゴマシーン</a></p>
+    <p><a href="./settings/">設定ページへ</a></p>
   </main>
   <!-- sw.jsの登録 -->
   <script>
