--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <p>注意事項:このアプリで作成するビンゴカードは一般のものとは違い、24マスに1~75までをランダムで入っています。一般のビンゴマシーンが利用できないこともありますのでご注意ください。</p>
   </header>
   <main>
-    <p><a href="./card/">ビンゴカード</a></p>
-    <p><a href="./printCards/">ビンゴカードのまとめて印刷用(イベントなどの準備でご利用ください。)</a></p>
-    <p><a href="./machine/">ビンゴマシーン</a></p>
-    <p><a href="./settings/">設定ページへ</a></p>
+    <p><a href="./card/index.html">ビンゴカード</a></p>
+    <p><a href="./printCards/index.html">ビンゴカードのまとめて印刷用(イベントなどの準備でご利用ください。)</a></p>
+    <p><a href="./machine/index.html">ビンゴマシーン</a></p>
+    <p><a href="./settings/index.html">設定ページへ</a></p>
   </main>
   <!-- sw.jsの登録 -->
   <script>
