--- a/settings/index.html
+++ b/settings/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <h1><a href="../">ビンゴカード</a>の設定</h1>
+    <h1><a href="../index.html">ビンゴカード</a>の設定</h1>
   </header>
   <main>
     <div class="settings-header">
