--- a/index.html
+++ b/index.html
@@ -1,40 +1,54 @@
 <!DOCTYPE html>
 <html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="web上でビンゴゲームを行うためのアプリです。ビンゴカードやビンゴマシーンなどがあります。イベント向けにカード一斉印刷メニューもあります。"
+    />
+    <title>ホーム | webビンゴアプリ | chakkun1121</title>
+    <link rel="manifest" href="manifest.json" defer />
+    <link rel="canonical" href="https://chakkun1121.github.io/bingo/" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="web上でビンゴゲームを行うためのアプリです。ビンゴカードやビンゴマシーンなどがあります。イベント向けにカード一斉印刷メニューもあります。">
-  <title>ホーム | webビンゴアプリ | chakkun1121</title>
-  <link rel="manifest" href="manifest.json" defer>
-</head>
-
-<body>
-  <header>
-    <h1>ビンゴ</h1>
-    <p>注意事項:このアプリで作成するビンゴカードは一般のものとは違い、24マスに1~75までをランダムで入っています。一般のビンゴマシーンが利用できないこともありますのでご注意ください。</p>
-  </header>
-  <main>
-    <p><a href="./card/index.html">ビンゴカード</a></p>
-    <p><a href="./printCards/index.html">ビンゴカードのまとめて印刷用(イベントなどの準備でご利用ください。)</a></p>
-    <p><a href="./machine/index.html">ビンゴマシーン</a></p>
-    <p><a href="./settings/index.html">設定ページへ</a></p>
-  </main>
-  <!-- sw.jsの登録 -->
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('sw.js').then(function (registration) {
-        // 登録成功
-        console.log('ServiceWorker の登録に成功しました。スコープ: ', registration.scope);
-      }).catch(function (err) {
-        // 登録失敗
-        console.log('ServiceWorker の登録に失敗しました。', err);
-      });
-    } else {
-      console.error("サービスワーカー非対応ブラウザです。")
-    }
-  </script>
-</body>
-
+  <body>
+    <header>
+      <h1>ビンゴ</h1>
+      <p style="color: red">
+        注意事項:このアプリで作成するビンゴカードは一般のものとは違い、24マスに1~75までをランダムで入っています。一般のビンゴマシーンが利用できないこともありますのでご注意ください。
+      </p>
+    </header>
+    <main>
+      <p><a href="./card/">ビンゴカード</a></p>
+      <p>
+        <a href="./printCards/"
+          >ビンゴカードのまとめて印刷用(イベントなどの準備でご利用ください。)</a
+        >
+      </p>
+      <p><a href="./machine/">ビンゴマシーン</a></p>
+      <p><a href="./settings/">設定ページへ</a></p>
+    </main>
+    <!-- sw.jsの登録 -->
+    <script>
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker
+          .register("sw.js")
+          .then(function (registration) {
+            // 登録成功
+            console.log(
+              "ServiceWorker の登録に成功しました。スコープ: ",
+              registration.scope
+            );
+          })
+          .catch(function (err) {
+            // 登録失敗
+            console.log("ServiceWorker の登録に失敗しました。", err);
+          });
+      } else {
+        console.error("サービスワーカー非対応ブラウザです。");
+      }
+    </script>
+  </body>
 </html>
