--- a/printCards/index.html
+++ b/printCards/index.html
@@ -9,6 +9,7 @@
   <title>ビンゴカード一括印刷 |
     webビンゴアプリ | chakkun1121</title>
   <link href="./style.css" rel="stylesheet">
+  <link rel="canonical" href="https://chakkun1121.github.io/bingo/printCards/">
 </head>
 
 <body>
