nextjs移行作業一応完了(一部まだだがきりがいいので)

--- a/public/printCards/index.html
+++ b/public/printCards/index.html
@@ -9,7 +9,7 @@
   <title>ビンゴカード一括印刷 |
     webビンゴアプリ | chakkun1121</title>
   <link href="./style.css" rel="stylesheet">
-  <link rel="canonical" href="https://chakkun1121.github.io/bingo/printCards/">
+  <link rel="canonical" href="https://chakkun1121.github.io/bingo/printCards/index.html">
 </head>
 
 <body>
