--- a/public/settings/index.html
+++ b/public/settings/index.html
@@ -8,14 +8,14 @@
     <link href="style.css" rel="stylesheet" />
     <link
       rel="canonical"
-      href="https://chakkun1121.github.io/bingo/settings/"
+      href="https://chakkun1121.github.io/bingo/settings/index.html"
     />
     <meta name="description" content="ビンゴアプリの設定ページです。" />
   </head>
 
   <body>
     <header>
-      <h1><a href="../index.html">ビンゴカード</a>の設定</h1>
+      <h1><a href="../">ビンゴカード</a>の設定</h1>
     </header>
     <main>
       <div class="settings-header">
