--- a/public/printCards/index.html
+++ b/public/printCards/index.html
@@ -9,7 +9,8 @@
   <title>ビンゴカード一括印刷 |
     webビンゴアプリ | chakkun1121</title>
   <link href="./style.css" rel="stylesheet">
-  <link rel="canonical" href="https://chakkun1121.github.io/bingo/printCards/index.html">
+  <link rel="canonical" href="https://chakkun1121.github.io/bingo/printCards">
+  <meta http-equiv="refresh" content="./printCards">
 </head>
 
 <body>
