メタタグの修正

--- a/public/machine/index.html
+++ b/public/machine/index.html
@@ -10,8 +10,10 @@
       name="description"
       content="chakkun1121作成のウェブビンゴマシーンです。このアプリでスマホやパソコンでビンゴマシーンが利用できます。ビンゴマシーンの操作画面を分離することもできます。"
     />
-    <link rel="canonical" href="https://chakkun1121.github.io/bingo/machine/" />
-
+    <link
+      rel="canonical"
+      href="https://chakkun1121.github.io/bingo/machine/index.html"
+    />
   </head>
 
   <body>
